[package]
name = "roguelike-tutorial-bevy"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
tcod = { git = "https://github.com/fisherdarling/tcod-rs" }
rand = "*"

[profile.dev]
opt-level = 1